--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -1,6 +1,3 @@
-/* --- CONTENT --- */
-//legend
-.SeriesIndexFooter-footer-3_ko5,
-.ArtistIndexFooter-footer-9DnJ- {
-    color: $White !important;
+[class^='DescriptionListItemTitle-title'] {
+  font-weight: normal;
 }
