--- a/sass/partials/_loading.scss
+++ b/sass/partials/_loading.scss
@@ -1,4 +1,3 @@
-/* --- LOADING --- */
-.LoadingIndicator-ripple-1264V {
-    border-color: $White !important;
+[class*='LoadingIndicator-ripple'] {
+  border-color: $white;
 }
