--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -1,14 +1,7 @@
-/* --- SIDEBAR --- */
-//background
-.PageSidebar-sidebarContainer-2kLcI {
-    background-color: $DarkBG !important;
+[class^='PageSidebar-sidebar'] {
+  background-color: $grey;
 }
 
-.PageSidebar-sidebar-2UXc0 {
-    background-color: transparent !important;
-}
-
-//item hover
-.PageSidebarItem-isActiveParentLink-2qgS5 {
-    background-color: $Grey !important;
+[class*='PageSidebarItem-isActiveParentLink'] {
+  background-color: $greydark;
 }
