--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,27 +1,17 @@
-/* --- FOOTER --- */
-//backgroun & text
-.PageContentFooter-contentFooter-1t6xx {
-    background-color: $GreyBG !important;
-    color: $White !important;
+[class^='PageContentFooter-contentFooter'] {
+  background-color: $dark;
+  color: $white;
 
-    //select
-    .Input-input-dS7Oc {
-        border-color: $White !important;
-        background-color: $Grey !important;
-        box-shadow: none !important;
-        color: $White !important;
+  [class^='ImportSeriesFooter-label'] {
+    font-weight: normal;
+  }
+
+  [class*='Input-input'] {
+    &:not([class*='CheckInput-primaryIsChecked']) {
+      background-color: $grey;
+      border-color: $grey;
+      box-shadow: none;
+      color: $white;
     }
-
-    //button
-    .Button-default-1X0nf {
-        background-color: $Grey !important;
-        border-color: $Grey !important;
-        color: $White !important;
-
-        //hover
-        &:hover {
-            background-color: darken($Grey, 2%) !important;
-            border-color: darken($Grey, 2%) !important;
-        }
-    }
+  }
 }
