--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,12 +1,5 @@
-/* --- HEADER --- */
-//background
-.PageHeader-header-1lnFT {
-    background-color: $DarkBG !important;
-}
-
-//menu icon hover
-.PageHeaderActionsMenu-menuButton-2VX4Y {
-    &:hover {
-        color: darken($White, 33%) !important;
-    }
+[class^='PageHeaderActionsMenu-menuButton'] {
+  &:hover {
+    color: darken($white, 25%);
+  }
 }
