--- a/sass/partials/_search.scss
+++ b/sass/partials/_search.scss
@@ -1,20 +1,20 @@
-/* --- SEARCH --- */
-//background
-.SeriesSearchInput-containerOpen-3CRkE .SeriesSearchInput-seriesContainer-3lxJI,
-.ArtistSearchInput-containerOpen-2N_Cb .ArtistSearchInput-artistContainer-3yVYN {
-    border: 1px solid $Grey !important;
-    background-color: $Grey !important;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075) !important;
+[class*='SeriesSearchInput-containerOpen'] [class^='SeriesSearchInput-seriesContainer'],
+[class*='ArtistSearchInput-containerOpen'] [class^='ArtistSearchInput-artistContainer'] {
+  background-color: $grey;
+  border: 1px solid $grey;
+  box-shadow: none;
+  color: $white;
 }
 
-//section title
-.SeriesSearchInput-sectionTitle-3he-k,
-.ArtistSearchInput-sectionTitle-1bgmQ {
-    color: $White !important;
+[class^='SeriesSearchInput-sectionTitle'],
+[class^='ArtistSearchInput-sectionTitle'] {
+  color: darken($white, 25%);
 }
 
-//item hover
-.SeriesSearchInput-highlighted-FnL2Y,
-.ArtistSearchInput-highlighted-3Rtd9 {
-    background-color: darken($Grey, 5%) !important;
+[class*='SeriesSearchInput-highlighted'] {
+  background-color: $sonarr;
+}
+
+[class*='ArtistSearchInput-highlighted'] {
+  background-color: $lidarr;
 }
