--- a/sass/partials/_seasonPass.scss
+++ b/sass/partials/_seasonPass.scss
@@ -1,32 +1,15 @@
-/* --- SEASEON PASS --- */
-//table
-.SeasonPassSeason-season-3Lc-4 {
-    border-color: $White !important;
-    background-color: $GreyBG !important;
+[class^='SeasonPassSeason-season'] {
+  background-color: $grey;
+  border-color: $grey;
 }
 
-.SeasonPassSeason-episodes-3v_IV {
-    background-color: $GreyBG !important;
-    color: $White !important;
+[class^='SeasonPassSeason-episodes'] {
+  background-color: $grey;
+  color: $white;
 }
 
-//icon
-.MonitorToggleButton-toggleButton-3WdIP {
-    &:hover {
-        color: darken($White, 33%) !important;
-    }
-}
-
-//FIX
-.SeasonPassRow-seasons-3ULdb {
-    display: table-cell !important;
-    flex-wrap: wrap !important;
-
-    div {
-        display: inline-block !important;
-
-        div {
-            display: inline-block !important;
-        }
-    }
+[class^='MonitorToggleButton-toggleButton'] {
+  &:hover {
+    color: darken($white, 25%);
+  }
 }
